# CoroTest

./: CMakeLists.txt  main.cpp  pch.h  types.h
remote_server/: IRemoteServer.h  cfakeserver.cpp  cfakeserver.h
task/: corotaskpromise.cpp  corotaskpromise.h  coroutinetask.cpp  coroutinetask.h  taskprocessor.cpp  taskprocessor.h
